# mpsfm

./: .gitignore  .gitmodules  README.md  demo.ipynb  examine_hdf5.py  format.sh  pyproject.toml  reconstruct.py  requirements.txt  test.py
configs/: custom.yaml  example.yaml  sp-lg_dav2.yaml  sp-lg_depthpro.yaml  sp-lg_m3dv2-large.yaml  sp-lg_m3dv2-small.yaml  sp-lg_m3dv2.yaml  sp-mast3r-dense.yaml  sp-mast3r.yaml  sp-roma-dense_m3dv2.yaml  sp-roma_m3dv2.yaml
configs/defaults/: depthanythingv2.yaml  depthpro.yaml  m3dv2-large.yaml  m3dv2-small.yaml  mast3r.yaml
configs/paper/: sp-lg_m3dv2.yaml  sp-mast3r.yaml  sp-roma-dense_m3dv2.yaml
custom_dataset/: create_dataset.py  gemini2L.yaml  img.csv
docker/: Dockerfile  install_ceres_solver.sh  install_colmap.sh  install_pyceres.sh
icp/: depth_to_3d.py  interpolate.py  main.py  save_pcd.py
local/example/: intrinsics.yaml
mpsfm/: baseclass.py
mpsfm/data_proc/: __init__.py  basedataset.py  simple.py
mpsfm/data_proc/hloc/: featurepairsdataset.py  imagedataset.py  imagepairdataset.py  utils.py
mpsfm/extraction/: __init__.py  base.py  base_model.py
mpsfm/extraction/pairs/: __init__.py  base.py
mpsfm/extraction/pairwise/: __init__.py  match_dense_2view.py  match_sparse.py
mpsfm/sfm/: reconstruction_manager.py
mpsfm/sfm/estimators/: __init__.py  absolute_pose.py  relative_pose.py
mpsfm/sfm/mapper/: __init__.py  base.py  bundle_adjustment.py  depthconsistency.py  (+3 more)
mpsfm/test/: simple.py
mpsfm/utils/: geometry.py  integration.py  io.py  parsers.py  tools.py  viz.py  viz_3d.py
mpsfm/vars/: gvars.py
(+56 files in other folders)
